[gd_scene load_steps=13 format=3 uid="uid://02bu8ramsuor"]

[ext_resource type="Script" uid="uid://tsl7tc2dqyt6" path="res://scripts/map.gd" id="1_0cso3"]
[ext_resource type="Texture2D" uid="uid://c1h1jfwme41n3" path="res://squares3.png" id="2_2klcf"]
[ext_resource type="PackedScene" uid="uid://coan3q88lkyio" path="res://scenes/player_square.tscn" id="3_2lpho"]
[ext_resource type="PackedScene" uid="uid://b6obkuu3066ih" path="res://scenes/hud.tscn" id="4_nakos"]
[ext_resource type="PackedScene" uid="uid://cgfeb12u6er2t" path="res://scenes/screen_transition.tscn" id="5_2klcf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0cso3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2klcf"]
texture = ExtResource("2_2klcf")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_urblq"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_0cso3")
sources/0 = SubResource("TileSetAtlasSource_2klcf")

[sub_resource type="Gradient" id="Gradient_0cso3"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.401961, 0.411765)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p5pve"]
gradient = SubResource("Gradient_0cso3")
width = 192
height = 192
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="GDScript" id="GDScript_e0an3"]
script/source = "extends Area2D

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5pve"]

[node name="Map" type="Node"]
script = ExtResource("1_0cso3")

[node name="MazeGrid" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_urblq")

[node name="PlayerSquare" parent="." instance=ExtResource("3_2lpho")]
visible = false
id = 1

[node name="PlayerView" type="Camera2D" parent="PlayerSquare"]
position = Vector2(32, 32)
scale = Vector2(1e-05, 1e-05)
zoom = Vector2(2, 2)

[node name="AreaOfView" type="PointLight2D" parent="PlayerSquare"]
texture = SubResource("GradientTexture2D_p5pve")

[node name="Goal" type="Area2D" parent="."]
script = SubResource("GDScript_e0an3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2(50, 50)
shape = SubResource("RectangleShape2D_p5pve")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(16, 16)

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="HUD" parent="." instance=ExtResource("4_nakos")]

[node name="ScreenTransition" parent="HUD" instance=ExtResource("5_2klcf")]

[connection signal="body_entered" from="Goal" to="." method="_on_goal_body_entered"]
[connection signal="start_hard" from="HUD" to="." method="_new_hard"]
[connection signal="start_normal" from="HUD" to="." method="_new_normal"]
